--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
